@@ -1,7 +1,7 @@
-$NetBSD: distinfo,v 1.17 2003/12/31 03:06:37 hubertf Exp $
+$NetBSD: distinfo,v 1.18 2004/01/06 15:44:10 hubertf Exp $
 
-SHA1 (xlockmore-5.11.tar.bz2) = 7fca6b29d82b9444e72e493b2db16debda31f804
-Size (xlockmore-5.11.tar.bz2) = 1541197 bytes
+SHA1 (xlockmore-5.11.1.tar.bz2) = 8d50904b2cfad40a84225861f13fb2fe5b1b325a
+Size (xlockmore-5.11.1.tar.bz2) = 1514029 bytes
 SHA1 (patch-aa) = 2d533dab923e0de20838c96e9b6e455fb2d724f8
 SHA1 (patch-ab) = 26d7e561da5c5f3c13fed172e4de9b1f345cd5ad
 SHA1 (patch-ac) = 875c4fc5ae98cfe389852891997e724f450f526f
